ci(Manejo De Usuarios): :construction: Registrar usuario que anteriormente ya estaba finalmente arreglado
registra usuarios

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "conventionalCommits.scopes": [
-        "EstructuraHexagonalPt1"
+        "EstructuraHexagonalPt1",
+        "Manejo De Usuarios"
     ]
 }
