build(filtros): :rocket: creacion e implementacion de los filtros

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "conventionalCommits.scopes": [
         "EstructuraHexagonalPt1",
-        "Manejo De Usuarios"
+        "Manejo De Usuarios",
+        "filtros"
     ]
 }
